--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -750,6 +750,8 @@
     padding-bottom: 30px;
     background: rgb(26, 25, 23);
 
+    /* overflow-x: hidden; */
+
     .statics-card {
 
         @include netbook {
@@ -802,6 +804,8 @@
     padding-bottom: 50px;
     background: rgb(26, 25, 23);
     position: relative;
+
+    /* overflow-x: hidden; */
 
 
     &__title {
@@ -871,6 +875,12 @@
 .home-loop-block {
     position: relative;
 
+    .splide {
+        overflow-x: hidden;
+    }
+
+
+
     &__title {
         line-height: 1.1;
         position: relative;
@@ -926,7 +936,7 @@
     }
 
     &__border_top {
-        width: 1920px;
+        width: 100%;
         height: 2px;
         position: absolute;
         z-index: -1;
