--- a/src/assets/scss/pages/_about.scss
+++ b/src/assets/scss/pages/_about.scss
@@ -149,3 +149,113 @@
         }
     }
 }
+
+.about-steps {
+    background-color: #161513;
+    position: relative;
+    padding-top: 50px;
+    padding-bottom: 100px;
+
+    &__block {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    &__title {
+        font-size: 36px;
+        font-weight: 600;
+        text-align: center;
+        max-width: 840px;
+
+        ._orange {
+            color: $orange;
+        }
+    }
+
+    &__text {
+        font-size: 20px;
+        color: $text-dark;
+        max-width: 840px;
+        text-align: center;
+    }
+
+    &__cards {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        max-width: 950px;
+        margin-top: 80px;
+        gap: -10px;
+    }
+
+    &__card {
+        width: 106%;
+        background: rgb(0, 13, 128);
+        border-radius: 45px;
+        box-shadow: 0px 48.78px 42.087px -35.167px #070115;
+        backdrop-filter: blur(43.27769088745117px);
+        border: 1px solid transparent;
+        background: linear-gradient(to left, #000D80 0%, #A495FF 100%) padding-box, linear-gradient(to bottom, rgba(19, 23, 47, 1) 4%, rgba(163, 148, 254, 1)) border-box;
+        position: relative;
+        left: -3%;
+
+        &_block {
+            border-radius: 45.376px 45.376px 45.38px 45.38px;
+            background: rgba(6, 11, 24, 0.62);
+            padding: 35px 35px 0;
+        }
+
+        &_title {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            margin-bottom: 20px;
+
+            &_icon {
+                display: flex;
+
+                img {
+                    width: 50px;
+                    height: 50px;
+                    object-fit: contain;
+                }
+            }
+
+            &_text {
+                background: linear-gradient(217deg, #FFF 7.74%, #969EC7 79.01%);
+                background-clip: text;
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+                font-size: 18px;
+                font-weight: 600;
+            }
+
+            &_arrow {
+                margin-left: auto;
+            }
+        }
+
+        &_content {
+            display: flex;
+            flex-direction: column;
+            position: relative;
+            align-items: center;
+        }
+
+        &_text {
+            color: #D9D9D9;
+            font-size: 13.5px;
+        }
+
+        &_img {
+            max-width: 87px;
+            position: relative;
+            bottom: -30px;
+        }
+
+        &._top{
+            position: relative;
+            top: -30px;
+        }
+    }
+}
