--- a/src/assets/scss/pages/_about.scss
+++ b/src/assets/scss/pages/_about.scss
@@ -150,17 +150,7 @@
     }
 }
 
-.about-steps {
-    background-color: #161513;
-    position: relative;
-    padding-top: 50px;
-    padding-bottom: 100px;
-
-    &__block {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
+.about-page {
 
     &__title {
         font-size: 36px;
@@ -178,6 +168,20 @@
         color: $text-dark;
         max-width: 840px;
         text-align: center;
+    }
+
+}
+
+.about-steps {
+    background-color: #161513;
+    position: relative;
+    padding-top: 50px;
+    padding-bottom: 100px;
+
+    &__block {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     &__cards {
@@ -253,9 +257,88 @@
             bottom: -30px;
         }
 
-        &._top{
+        &._top {
             position: relative;
             top: -30px;
+        }
+    }
+}
+
+.about-why {
+    background-color: #161513;
+    position: relative;
+    padding-top: 50px;
+    padding-bottom: 100px;
+
+    &__block {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    &__cards {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 20px;
+        margin-top: 100px;
+    }
+
+    &__card {
+        padding: 15px;
+        border-radius: 18px;
+        border: 1px solid transparent;
+        transition: 300ms ease;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+
+        &_img {
+            border-radius: 9px;
+            background: #201E1B;
+            width: 86px;
+            height: 75px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 5px;
+            margin-bottom: 24px;
+        }
+
+        &_title {
+            font-size: 20px;
+            font-weight: 700;
+            color: white;
+            margin-bottom: 14px;
+        }
+
+        &_text {
+            font-size: 20px;
+            color: $text-dark;
+            line-height: 1.3;
+        }
+
+        &:hover {
+            border: 1px solid rgba(78, 71, 60, 0.00);
+            background: #201E1B;
+            box-shadow: 0px 4px 21.4px 0px rgba(0, 0, 0, 0.25);
+
+            svg path {
+                fill: $orange;
+            }
+
+            .about-why__card_img {
+                background-color: #161513;
+            }
+
+        }
+
+        &:nth-child(8n+5),
+        &:nth-child(8n+6),
+        &:nth-child(8n+7),
+        &:nth-child(8n+8) {
+            align-items: flex-end;
+            /* position: relative;
+            left: 40px; */
         }
     }
 }
