--- a/src/assets/scss/pages/_about.scss
+++ b/src/assets/scss/pages/_about.scss
@@ -123,7 +123,7 @@
     }
 
     &__btn {
-        padding: 18px 65px;
+        padding: 19px 68px;
         font-size: 20px;
         margin-top: 40px;
     }
@@ -170,6 +170,12 @@
         text-align: center;
     }
 
+    &__block {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
 }
 
 .about-steps {
@@ -177,12 +183,6 @@
     position: relative;
     padding-top: 50px;
     padding-bottom: 100px;
-
-    &__block {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
 
     &__cards {
         display: grid;
@@ -270,12 +270,6 @@
     padding-top: 50px;
     padding-bottom: 100px;
 
-    &__block {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
     &__cards {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
@@ -339,6 +333,54 @@
             align-items: flex-end;
             /* position: relative;
             left: 40px; */
+        }
+    }
+}
+
+.about-services {
+    background-color: #161513;
+    position: relative;
+    padding-top: 50px;
+    padding-bottom: 100px;
+
+    &__block {
+        margin-top: 60px;
+    }
+
+    &__card {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 65px;
+        margin-bottom: 60px;
+
+        &._reverse {
+            flex-direction: row-reverse;
+        }
+
+        &_img {
+            width: 100%;
+        }
+
+        &_content {
+            width: 100%;
+        }
+
+        &_title {
+            font-size: 36px;
+            font-weight: 600;
+            line-height: 1.3;
+            margin-bottom: 20px;
+        }
+
+        &_text {
+            font-size: 20px;
+            color: $text-dark;
+            margin-bottom: 40px;
+        }
+
+        &_btn {
+            display: flex;
         }
     }
 }
