--- a/src/assets/scss/pages/_about.scss
+++ b/src/assets/scss/pages/_about.scss
@@ -60,8 +60,7 @@
         position: absolute;
         width: 200vw;
 
-        left: 100%;
-        right: 100%;
+        left: 90vw;
         margin-left: -100vw;
         margin-right: -100vw;
         gap: 30px;
@@ -262,6 +261,18 @@
             top: -30px;
         }
     }
+
+    &__left {
+        position: absolute;
+        left: -100px;
+        top: 50px;
+    }
+
+    &__right {
+        position: absolute;
+        top: 50px;
+        right: -100px;
+    }
 }
 
 .about-why {
@@ -382,5 +393,109 @@
         &_btn {
             display: flex;
         }
+    }
+}
+
+.about-reviews {
+    background-color: #161513;
+    position: relative;
+    padding-top: 50px;
+    padding-bottom: 100px;
+
+    .home-other-reviews {
+        margin-top: 40px;
+    }
+
+    &__block {
+        margin: 40px auto 0;
+        columns: 4;
+        column-gap: 20px;
+        position: relative;
+        height: 1000px;
+        overflow: hidden;
+
+        &::after {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(180deg, rgba(22, 21, 19, 0.00) 0%, #161513 89.22%);
+        }
+    }
+
+    &__card {
+        margin-bottom: 20px;
+        border-radius: 11px 35px 35px 35px;
+        background: #2D2B29;
+        padding: 25px;
+        break-inside: avoid;
+
+        &_text {
+            font-size: 14px;
+            color: $text-dark;
+        }
+
+        &_block {
+            display: flex;
+            align-items: center;
+            gap: 18px;
+            margin-top: 15px;
+        }
+
+        &_img {
+            width: 64px;
+            height: 64px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+            overflow: hidden;
+        }
+
+        &_content {
+            display: flex;
+            flex-direction: column;
+        }
+
+        &_name {
+            font-size: 16px;
+            font-weight: 600;
+        }
+
+        &_game {
+            font-size: 12px;
+            color: $text-dark;
+        }
+
+        &_date {
+            font-size: 12px;
+            color: $text-dark;
+        }
+    }
+}
+
+.about-others {
+    background-color: #161513;
+    position: relative;
+    border-bottom: 1px solid $orange;
+    height: calc(100% - 65px);
+
+    .home-loop-block__title {
+        z-index: 4;
+        margin-bottom: 0;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    .home-loop-block__border_top {
+        top: 0;
+        z-index: 1;
+    }
+
+    .about-header__block {
+        overflow: hidden;
     }
 }
