--- a/src/assets/scss/pages/_about.scss
+++ b/src/assets/scss/pages/_about.scss
@@ -21,8 +21,12 @@
         z-index: 2;
 
         &_main {
-            max-width: 730px;
+            max-width: 50%;
             filter: drop-shadow(0px 0px 120px #FF6C3D40);
+
+            @include mobile {
+                max-width: 80%;
+            }
         }
 
         &_item {
@@ -34,24 +38,51 @@
             left: 10%;
             top: 50px;
             max-width: 100px;
+
+            @include mobile {
+                display: none;
+            }
         }
 
         &_2 {
             right: 10%;
             top: 50px;
             max-width: 110px;
+
+            @include mobile {
+                display: none;
+            }
         }
 
         &_3 {
             left: 0;
             top: 0;
             max-width: 180px;
+
+            @include netbook {
+                top: inherit;
+                bottom: -50px;
+                max-width: 140px;
+            }
+
+            @include mobile {
+                display: none;
+            }
         }
 
         &_4 {
             right: 5%;
-            bottom: 50px;
+            top: -80%;
             max-width: 180px;
+
+            @include netbook {
+                top: inherit;
+                bottom: -80px;
+            }
+
+            @include mobile {
+                display: none;
+            }
         }
     }
 
@@ -65,7 +96,9 @@
         margin-right: -100vw;
         gap: 30px;
 
-
+        @include netbook {
+            gap: 20px;
+        }
 
         span {
             border-radius: 9px;
@@ -75,11 +108,17 @@
             line-height: 1;
             color: $text-dark;
             text-transform: uppercase;
+            white-space: nowrap;
 
             &.active {
                 color: white;
                 background: $orange;
                 filter: drop-shadow(0 0 28px $orange);
+            }
+
+            @include netbook {
+                font-size: 20px;
+                padding: 10px 30px;
             }
         }
 
@@ -94,6 +133,11 @@
             bottom: 50px;
             transform-origin: center left;
             transform: rotate(-15deg);
+
+            @include mobile {
+                bottom: 0;
+                left: 50%;
+            }
         }
     }
 
@@ -111,6 +155,8 @@
         gap: 10px;
         font-size: 52px;
         font-weight: 600;
+
+        @include netbook {}
     }
 
     &__text {
@@ -119,6 +165,8 @@
         text-align: center;
         margin-top: 25px;
         font-size: 20px;
+        position: relative;
+        z-index: 3;
     }
 
     &__btn {
@@ -160,6 +208,10 @@
         ._orange {
             color: $orange;
         }
+
+        @include mobile {
+            font-size: 30px;
+        }
     }
 
     &__text {
@@ -167,6 +219,12 @@
         color: $text-dark;
         max-width: 840px;
         text-align: center;
+        margin-top: 15px;
+
+        @include mobile {
+            font-size: 18px;
+
+        }
     }
 
     &__block {
@@ -189,7 +247,12 @@
         grid-template-columns: 1fr 1fr 1fr;
         max-width: 950px;
         margin-top: 80px;
-        gap: -10px;
+
+        @include mobile {
+            grid-template-columns: 1fr;
+            gap: 60px;
+            margin-top: 50px;
+        }
     }
 
     &__card {
@@ -201,7 +264,13 @@
         border: 1px solid transparent;
         background: linear-gradient(to left, #000D80 0%, #A495FF 100%) padding-box, linear-gradient(to bottom, rgba(19, 23, 47, 1) 4%, rgba(163, 148, 254, 1)) border-box;
         position: relative;
+        z-index: 3;
         left: -3%;
+
+        @include mobile {
+            left: 0;
+            width: 100%;
+        }
 
         &_block {
             border-radius: 45.376px 45.376px 45.38px 45.38px;
@@ -260,21 +329,46 @@
         &._top {
             position: relative;
             top: -30px;
+
+            @include mobile {
+                top: 0;
+            }
         }
     }
 
     &__left {
         width: 320px;
         position: absolute;
-        left: -10px;
+        z-index: 2;
+        left: -3%;
         bottom: -10px;
+
+        @include netbook {
+            bottom: inherit;
+            top: -5%;
+            left: -10%;
+        }
+
+        @include mobile {
+            display: none;
+        }
     }
 
     &__right {
         width: 320px;
         position: absolute;
         top: 50px;
-        right: -10px;
+        right: -3%;
+
+        @include netbook {
+            top: inherit;
+            bottom: -5%;
+            right: -10%;
+        }
+
+        @include mobile {
+            display: none;
+        }
     }
 }
 
@@ -284,11 +378,25 @@
     padding-top: 50px;
     padding-bottom: 100px;
 
+    @include mobile {
+        padding-top: 0;
+        padding-bottom: 50px;
+    }
+
     &__cards {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         gap: 20px;
         margin-top: 100px;
+
+        @include netbook {
+            grid-template-columns: repeat(3, 1fr);
+        }
+
+        @include mobile {
+            grid-template-columns: 1fr;
+            margin-top: 50px;
+        }
     }
 
     &__card {
@@ -300,6 +408,15 @@
         flex-direction: column;
         align-items: flex-start;
 
+        @include mobile {
+            display: grid;
+            grid-template-columns: auto auto;
+            grid-template-row: 1fr 1fr;
+            gap: 0 20px;
+
+            padding: 0px;
+        }
+
         &_img {
             border-radius: 9px;
             background: #201E1B;
@@ -310,6 +427,15 @@
             justify-content: center;
             padding: 5px;
             margin-bottom: 24px;
+
+            @include mobile {
+                grid-row-start: 1;
+                grid-row-end: 3;
+                margin-bottom: 0;
+
+                width: 53px;
+                height: 75px;
+            }
         }
 
         &_title {
@@ -345,8 +471,10 @@
         &:nth-child(8n+7),
         &:nth-child(8n+8) {
             align-items: flex-end;
-            /* position: relative;
-            left: 40px; */
+
+            @include netbook {
+                align-items: flex-start;
+            }
         }
     }
 }
@@ -356,6 +484,10 @@
     position: relative;
     padding-top: 50px;
     padding-bottom: 100px;
+
+    @include mobile {
+        padding-bottom: 20px;
+    }
 
     &__block {
         margin-top: 60px;
@@ -368,12 +500,36 @@
         gap: 65px;
         margin-bottom: 60px;
 
+        @include mobile {
+            flex-direction: column;
+            margin-bottom: 80px;
+            gap: 30px;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
+
         &._reverse {
             flex-direction: row-reverse;
+
+            flex-direction: column;
         }
 
         &_img {
             width: 100%;
+
+            ._img-1 {
+                filter: drop-shadow(0 0 50px #FF6C3D30);
+            }
+
+            ._img-2 {
+                filter: drop-shadow(0 0 50px #515cf530);
+            }
+
+            ._img-3 {
+                filter: drop-shadow(0 0 50px #fb8b3330);
+            }
         }
 
         &_content {
@@ -391,6 +547,10 @@
             font-size: 20px;
             color: $text-dark;
             margin-bottom: 40px;
+
+            @include mobile {
+                margin-bottom: 10px;
+            }
         }
 
         &_btn {
@@ -407,6 +567,10 @@
     height: 1300px;
     overflow: hidden;
 
+    @include mobile {
+        padding-top: 40px;
+    }
+
     .home-other-reviews {
         margin-top: 40px;
     }
@@ -417,16 +581,26 @@
         column-gap: 20px;
         position: relative;
         overflow: hidden;
-        height: 1200px;
+        height: 1800px;
+
+        @include mobile {
+            columns: 2;
+            column-gap: 11px;
+            margin-top: 25px;
+        }
 
         &::after {
             content: "";
             position: absolute;
-            top: 0;
+            bottom: 800px;
             left: 0;
             width: 100%;
-            height: 100%;
+            height: 60%;
             background: linear-gradient(180deg, rgba(22, 21, 19, 0.00) 0%, #161513 89.22%);
+
+            @include mobile {
+                bottom: 1000px;
+            }
         }
     }
 
@@ -436,6 +610,11 @@
         background: #2D2B29;
         padding: 25px;
         break-inside: avoid;
+
+        @include mobile {
+            padding: 15px;
+            border-radius: 8px 25px 25px 25px;
+        }
 
         &_text {
             font-size: 14px;
@@ -447,6 +626,10 @@
             align-items: center;
             gap: 18px;
             margin-top: 15px;
+
+            @include mobile {
+                flex-direction: column;
+            }
         }
 
         &_img {
@@ -493,6 +676,7 @@
         position: absolute;
         left: 50%;
         transform: translateX(-50%);
+
     }
 
     .home-loop-block__border_top {
@@ -502,5 +686,12 @@
 
     .about-header__block {
         overflow: hidden;
+    }
+
+    .about-header__img {
+        @include mobile {
+            padding-top: 50px;
+            padding-bottom: 20px;
+        }
     }
 }
