--- a/src/assets/scss/pages/_about.scss
+++ b/src/assets/scss/pages/_about.scss
@@ -513,7 +513,9 @@
         &._reverse {
             flex-direction: row-reverse;
 
-            flex-direction: column;
+            @include mobile {
+                flex-direction: column;
+            }
         }
 
         &_img {
