--- a/src/assets/scss/sections/_header.scss
+++ b/src/assets/scss/sections/_header.scss
@@ -214,9 +214,9 @@
             visibility: hidden;
             opacity: 0;
             position: absolute;
-            top: 74px;
-            width: calc(100% + 50px);
-            left: -25px;
+            top: 135px;
+            width: 100%;
+            left: 0;
             transition: 300ms ease;
 
             &.active {
@@ -229,24 +229,28 @@
             display: flex;
             align-items: center;
             justify-content: center;
+
+            @include mobile {
+                display: flex;
+                flex-direction: column;
+            }
+        }
+
+        &_wrapper {
+            display: flex;
+            align-items: center;
+            justify-content: center;
             gap: 0px;
 
             @include netbook {
                 max-width: 480px;
             }
 
-            /* @include netbook {
-                display: flex;
-                justify-content: center;
-                background: linear-gradient(268.85deg, rgba(79, 79, 79, 0.35) 0.01%, rgba(72, 60, 54, 0.35) 31.28%, rgba(70, 66, 63, 0.35) 48.785%, rgba(72, 60, 54, 0.35) 70.712%, rgba(79, 79, 79, 0.35) 99.994%);
-            } */
-
-            /* @include mobile {
-                height: calc(100vh - 99px);
-                flex-direction: column;
-                justify-content: flex-start;
-                gap: 0;
-            } */
+            @include mobile {
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                gap: 20px;
+            }
         }
 
         &_item {
@@ -268,6 +272,13 @@
                 gap: 2px;
                 width: 100%;
                 overflow: visible;
+            }
+
+            @include mobile {
+                gap: 15px;
+                padding: 0;
+                height: auto;
+                justify-content: flex-start;
             }
 
             &::after {
@@ -292,6 +303,15 @@
                 @include netbook {
                     transform: scale(0.7);
                 }
+
+                @include mobile {
+                    transform: scale(1);
+
+                    svg {
+                        width: 35px;
+                        height: 35px;
+                    }
+                }
             }
 
             &_text {
@@ -311,6 +331,11 @@
                 @include netbook {
                     font-size: 13px;
                     line-height: 1;
+                }
+
+                @include mobile {
+                    font-size: 18px;
+                    line-height: 1.2;
                 }
             }
 
@@ -340,27 +365,30 @@
                 &::after {
                     background: $orange;
                 }
-            }
 
-            @include mobile {
-                width: 100%;
-            }
+                @include mobile {
+                    background: transparent;
+                    border-bottom-color: transparent;
 
-
-            @include mobile {
-                padding: 25px 0;
+                    &::after {
+                        background: transparent;
+                    }
+                }
             }
         }
 
         &_mobile {
             display: none;
-            flex-direction: column;
+            justify-content: center;
+            align-items: center;
             gap: 10px;
             padding-top: 30px;
             padding-bottom: 20px;
 
             @include mobile {
                 display: flex;
+                gap: 30px;
+                padding: 10px 0 25px;
             }
         }
 
@@ -468,12 +496,16 @@
             height: 24px;
 
             @include mobile {
-                width: 100%;
+                width: 41px;
                 height: auto;
                 align-items: center;
                 justify-content: center;
                 gap: 15px;
                 font-size: 20px;
+
+                span {
+                    display: none;
+                }
             }
 
             svg {
@@ -619,8 +651,7 @@
     opacity: 0;
     width: 100%;
     border: 1px solid #522516;
-    background: #1A1917;
-    backdrop-filter: blur(17.549999237060547px);
+
 
     &.active {
         opacity: 1;
@@ -629,10 +660,22 @@
 }
 
 .logo-menu {
+
+    &__wrapper {
+        position: relative;
+        z-index: 2;
+        background: #1A1917;
+        backdrop-filter: blur(17.549999237060547px);
+    }
+
     &__block {
         display: flex;
         flex-direction: column;
         gap: 10px;
+
+        @include mobile {
+            padding-top: 210px;
+        }
     }
 
     &__title {
@@ -651,6 +694,10 @@
                 justify-content: center;
                 text-align: center;
             }
+        }
+
+        @include mobile {
+            padding: 25px 0;
         }
     }
 
@@ -706,6 +753,22 @@
         @include mobile {
             display: none;
         }
+
+        &:hover {
+            svg path {
+                fill: $orange;
+            }
+        }
+    }
+
+    &__bg {
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100vh;
+        background: rgba(16, 15, 14, 0.78);
+        backdrop-filter: blur(24.850000381469727px);
     }
 }
 
@@ -722,6 +785,7 @@
     background: rgba(28, 27, 25, 0.90);
     backdrop-filter: blur(17.549999237060547px);
     padding: 40px 0 0;
+    overflow: scroll;
 
     &.active {
         opacity: 1;
