--- a/src/assets/scss/pages/_basket.scss
+++ b/src/assets/scss/pages/_basket.scss
@@ -110,6 +110,10 @@
         position: relative;
         overflow: hidden;
 
+        @include mobile {
+            align-items: flex-start;
+        }
+
         &:hover {
             border-color: $orange;
         }
@@ -153,6 +157,7 @@
         &_title {
             font-size: 24px;
             font-weight: 700;
+            line-height: 1.2;
 
             @include netbook {
                 font-size: 20px;
@@ -163,6 +168,8 @@
             font-size: 12px;
             font-weight: 400;
             color: $text-dark;
+            line-height: 1.2;
+            margin-top: 10px;
         }
 
         &_tags {
@@ -174,6 +181,7 @@
 
             @include netbook {
                 margin-top: 10px;
+                gap: 5px;
             }
         }
 
@@ -201,8 +209,13 @@
             gap: 10px;
 
             @include netbook {
+                width: calc(100% + 100px);
+                position: relative;
+                left: -100px;
                 flex-direction: row;
                 align-items: center;
+                flex-wrap: wrap;
+                justify-content: flex-end;
             }
         }
 
