--- a/src/partials/main-header.html
+++ b/src/partials/main-header.html
@@ -48,20 +48,20 @@
                             <img src="assets/images/icons/search-normal.svg" alt="">
                             <span>Поиск</span>
                         </a>
-                        <a href="#" class="header__actions_link">
+                        <a href="admin-tickets.html" class="header__actions_link">
                             <img src="assets/images/icons/messages.svg" alt="">
                             <span>Тикеты</span>
                         </a>
-                        <a href="#" class="header__actions_link">
+                        <a href="admin-wallet.html" class="header__actions_link">
                             <img src="assets/images/icons/empty-wallet-add.svg" alt="">
                             <span>Баланс</span>
                         </a>
-                        <a href="#" class="header__actions_link">
+                        <a href="basket.html" class="header__actions_link">
                             <img src="assets/images/icons/bag-2.svg" alt="">
                             <span>Корзина</span>
                         </a>
                     </div>
-                    
+
                     <div class="header__menu_wrapper">
                         <a href="catalog.html" class="header__menu_item active">
                             <span class="header__menu_item_svg">
@@ -166,13 +166,13 @@
                             <path d="M21.9881 18.95C21.6581 18.34 20.9581 18 20.0181 18C19.3081 18 18.6981 18.29 18.3381 18.79C17.9781 19.29 17.8981 19.96 18.1181 20.63C18.5481 21.93 19.2981 22.22 19.7081 22.27C19.7681 22.28 19.8281 22.28 19.8981 22.28C20.3381 22.28 21.0181 22.09 21.6781 21.1C22.2081 20.33 22.3081 19.56 21.9881 18.95Z" fill="#847F7D" />
                         </svg>
                     </a>
-                    <a href="#" class="header__actions_link">
+                    <a href="admin-tickets.html" class="header__actions_link">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                             <path d="M13.19 6H6.79C6.53 6 6.28 6.01 6.04 6.04C3.35 6.27 2 7.86 2 10.79V14.79C2 18.79 3.6 19.58 6.79 19.58H7.19C7.41 19.58 7.7 19.73 7.83 19.9L9.03 21.5C9.56 22.21 10.42 22.21 10.95 21.5L12.15 19.9C12.3 19.7 12.54 19.58 12.79 19.58H13.19C16.12 19.58 17.71 18.24 17.94 15.54C17.97 15.3 17.98 15.05 17.98 14.79V10.79C17.98 7.6 16.38 6 13.19 6ZM6.5 14C5.94 14 5.5 13.55 5.5 13C5.5 12.45 5.95 12 6.5 12C7.05 12 7.5 12.45 7.5 13C7.5 13.55 7.05 14 6.5 14ZM9.99 14C9.43 14 8.99 13.55 8.99 13C8.99 12.45 9.44 12 9.99 12C10.54 12 10.99 12.45 10.99 13C10.99 13.55 10.55 14 9.99 14ZM13.49 14C12.93 14 12.49 13.55 12.49 13C12.49 12.45 12.94 12 13.49 12C14.04 12 14.49 12.45 14.49 13C14.49 13.55 14.04 14 13.49 14Z" fill="#847F7D" />
                             <path d="M21.9802 6.79V10.79C21.9802 12.79 21.3602 14.15 20.1202 14.9C19.8202 15.08 19.4702 14.84 19.4702 14.49L19.4802 10.79C19.4802 6.79 17.1902 4.5 13.1902 4.5L7.10025 4.51C6.75025 4.51 6.51025 4.16 6.69025 3.86C7.44025 2.62 8.80025 2 10.7902 2H17.1902C20.3802 2 21.9802 3.6 21.9802 6.79Z" fill="#847F7D" />
                         </svg>
                     </a>
-                    <a href="#" class="header__actions_link">
+                    <a href="admin-wallet.html" class="header__actions_link">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                             <path d="M8.25864 21.2453C8.90561 20.5983 9.27728 19.7724 9.37364 18.9189C9.50441 17.7833 9.12586 16.6063 8.25864 15.7391C7.74244 15.2229 7.10923 14.8788 6.44161 14.7205C5.16831 14.397 3.75736 14.7342 2.75248 15.7391C2.05733 16.4343 1.67878 17.3221 1.6306 18.2375C1.59619 18.6298 1.6306 19.0359 1.73385 19.4282C1.89215 20.0959 2.23628 20.7291 2.75248 21.2453C4.27356 22.7663 6.73756 22.7663 8.25864 21.2453ZM6.96469 17.7764C7.36389 17.7764 7.69426 18.1068 7.69426 18.506C7.68738 18.912 7.36389 19.2355 6.95781 19.2424L6.23513 19.2355L6.24201 19.9307C6.23513 20.3368 5.91164 20.6602 5.50556 20.6671C5.09948 20.6602 4.776 20.3367 4.76911 19.9307L4.776 19.2355L4.05331 19.2424C3.64723 19.2355 3.32375 18.912 3.31686 18.506C3.32375 18.3064 3.40634 18.1274 3.53711 17.9966C3.66788 17.8659 3.84683 17.7833 4.04643 17.7764L4.776 17.7764L4.776 17.0193C4.776 16.8128 4.85859 16.6339 4.98936 16.5031C5.12013 16.3723 5.29908 16.2897 5.50556 16.2897C5.90476 16.2897 6.23513 16.6201 6.23513 17.0193L6.23513 17.7764L6.96469 17.7764Z" fill="#847F7D" />
                             <path d="M15.0952 3.84548V7.54425H13.6352V3.84548C13.6352 3.58267 13.4016 3.45613 13.2458 3.45613C13.1972 3.45613 13.1485 3.46587 13.0998 3.48533L5.38108 6.39568C4.8652 6.59035 4.53426 7.07703 4.53426 7.63185V8.284C3.6485 8.94589 3.07422 10.0068 3.07422 11.2041V7.63185C3.07422 6.47355 3.78477 5.44179 4.8652 5.03298L12.5937 2.1129C12.8078 2.03503 13.0317 1.99609 13.2458 1.99609C14.2192 1.99609 15.0952 2.78452 15.0952 3.84548Z" fill="#847F7D" />
