--- a/src/assets/scss/_classes.scss
+++ b/src/assets/scss/_classes.scss
@@ -579,10 +579,11 @@
 
             &:hover {
                 filter: brightness(230%);
-            }
 
-            &._active{
-                
+                /* &~.catalog__tab_drop {
+                    visibility: visible;
+                    opacity: 1;
+                } */
             }
 
             @include netbook {
@@ -615,7 +616,7 @@
             background: linear-gradient(0deg, rgba(0, 0, 0, 0.51) 0%, rgba(0, 0, 0, 0.51) 100%), linear-gradient(270deg, rgba(79, 79, 79, 0.35) 0%, rgba(72, 60, 54, 0.35) 31.28%, rgba(70, 66, 63, 0.35) 48.78%, rgba(72, 60, 54, 0.35) 70.71%, rgba(79, 79, 79, 0.35) 100%);
             backdrop-filter: blur(30.899999618530273px);
 
-            &._active{
+            &._active {
                 visibility: visible;
                 opacity: 1;
             }
