--- a/src/assets/scss/_classes.scss
+++ b/src/assets/scss/_classes.scss
@@ -507,18 +507,18 @@
 
 .catalog {
     &__tabs {
+        display: grid;
+        grid-template-columns: repeat(8, 120px);
+        justify-content: center;
         width: 100%;
         border-radius: 20px;
         border-bottom: 1px solid #2C2C2A;
         background: #161513;
-        display: grid;
-        grid-template-columns: repeat(8, 120px);
-        justify-content: center;
-
 
         @include mobile {
-            padding: 0px;
             display: flex;
+            border-bottom: 1px solid transparent;
+            background: transparent;
         }
 
         &_content {
@@ -534,21 +534,41 @@
                 justify-content: flex-start;
                 flex-direction: column;
                 position: fixed;
-                bottom: -101%;
-                left: 0;
-                width: 100%;
+                top: -110%;
+                left: 20px;
+                max-width: calc(100% - 40px);
                 height: auto;
                 background-color: darken($color: #1C1B19, $amount: 5);
                 z-index: 12;
-                overflow: auto;
-                padding-top: 20px;
-                padding-bottom: 40px;
-                border-radius: 10px 10px 0 0;
-                border-top: 2px solid $orange;
-                transition: 200ms ease;
+                border-radius: 10px;
+                border-bottom: 1px solid #2C2C2A;
+                background: #161513;
+                transition: 300ms ease;
+                padding: 15px 0 30px;
+                opacity: 0;
 
                 &.active {
-                    bottom: -10px;
+                    top: 175px;
+                    opacity: 1;
+                }
+            }
+        }
+
+        &.active {
+            .catalog__header {
+                z-index: 13;
+                position: fixed;
+                left: 20px;
+                top: 95px;
+                max-width: calc(100% - 40px);
+
+                .catalog__btn {
+                    border: 1px solid $orange;
+                    background: #2E2D2B;
+
+                    &_img {
+                        transform: rotateX(180deg);
+                    }
                 }
             }
         }
@@ -732,11 +752,6 @@
             border-bottom-color: #FFA031;
         }
 
-
-        @include mobile {
-            max-width: 100%;
-        }
-
         &_btn {
             width: 100%;
             display: flex;
@@ -758,11 +773,19 @@
 
             @include mobile {
                 flex-direction: row;
+                justify-content: flex-start;
                 gap: 15px;
-                background: linear-gradient(270deg, rgba(79, 79, 79, 0.35) 0%, rgba(72, 60, 54, 0.35) 31.28%, rgba(70, 66, 63, 0.35) 48.78%, rgba(72, 60, 54, 0.35) 70.71%, rgba(79, 79, 79, 0.35) 100%);
-                border-radius: 8px;
-                padding: 12px;
-                margin: 5px 20px;
+                padding: 15px 20px;
+            }
+        }
+
+        &_arrow {
+            display: none;
+
+            @include mobile {
+                display: flex;
+                margin-left: auto;
+                width: 21px;
             }
         }
 
@@ -782,6 +805,10 @@
             background: linear-gradient(0deg, rgba(0, 0, 0, 0.51) 0%, rgba(0, 0, 0, 0.51) 100%), linear-gradient(270deg, rgba(79, 79, 79, 0.35) 0%, rgba(72, 60, 54, 0.35) 31.28%, rgba(70, 66, 63, 0.35) 48.78%, rgba(72, 60, 54, 0.35) 70.71%, rgba(79, 79, 79, 0.35) 100%);
             backdrop-filter: blur(30.899999618530273px);
 
+            @include mobile {
+                width: 100%;
+            }
+
             &._active {
                 visibility: visible;
                 opacity: 1;
@@ -794,6 +821,10 @@
                 gap: 20px;
                 border-bottom: 1px solid white;
                 overflow: hidden;
+
+                @include mobile {
+                    display: none;
+                }
             }
 
             &_all {
@@ -842,6 +873,12 @@
                 display: flex;
                 gap: 60px;
                 padding: 10px;
+
+                @include mobile {
+                    padding: 0 0 20px;
+                    flex-direction: column;
+                    gap: 30px;
+                }
             }
 
             &_menu {
@@ -850,6 +887,31 @@
                 gap: 4px;
                 max-width: 146px;
                 width: 100%;
+
+                @include mobile {
+                    max-width: 100%;
+                    height: 40vh;
+                    overflow-y: auto;
+                    gap: 0;
+                    margin-top: 10px;
+
+
+                    &::-webkit-scrollbar {
+                        width: 2px;
+                        border-radius: 5px;
+                    }
+
+
+                    &::-webkit-scrollbar-track {
+                        background: black;
+                    }
+
+
+                    &::-webkit-scrollbar-thumb {
+                        background: #2E2D2B;
+                    }
+
+                }
             }
 
             &_link {
@@ -859,23 +921,70 @@
                 color: $text-dark;
                 padding: 4px 14px;
                 border-radius: 4px;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
 
                 &._active,
                 &:hover {
                     border-right: 1px solid $orange;
                     background: #262421;
                 }
+
+                @include mobile {
+                    font-weight: 400;
+                    font-size: 18px;
+                    padding: 15px 20px;
+
+                }
             }
 
-            &_card {}
+            &_card {
+                @include mobile {
+                    display: none;
+                }
+            }
+
+            &_return {
+                display: none;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+                border-radius: 10px;
+                background: #2E2D2B;
+                padding: 12px;
+                width: 100%;
+                margin-left: 20px;
+                max-width: calc(100% - 40px);
+                font-size: 18px;
+                color: $text-dark;
+                position: relative;
+
+                &_svg {
+                    position: absolute;
+                    left: 20px;
+                }
+
+                @include mobile {
+                    display: flex;
+                }
+            }
         }
 
         &_svg {
             height: 28px;
+
+            @include mobile {
+                width: 28px;
+            }
         }
 
         &_title {
             font-size: 14px;
+
+            @include mobile {
+                font-size: 18px;
+            }
         }
 
         &_name {
@@ -889,6 +998,7 @@
                 padding: 0;
                 margin: 0;
                 background: transparent;
+                border: none;
             }
 
             &:hover {
@@ -926,6 +1036,16 @@
             }
         }
 
+        @include mobile {
+            transition: 0ms ease;
+
+            &._active {
+                position: absolute;
+                z-index: 1;
+                left: 0;
+                background: #1F1E1B;
+            }
+        }
 
     }
 
@@ -980,14 +1100,19 @@
     }
 
     &__header {
-        display: grid;
-        width: 100%;
+        display: flex;
 
         @include mobile {
+            width: 100%;
             padding: 8px;
+            border-radius: 20px;
+            border-bottom: 1px solid #2C2C2A;
+            background: #161513;
+            gap: 5px;
         }
     }
 }
+
 
 .search-block {
     display: flex;
@@ -1157,12 +1282,6 @@
         }
     }
 
-    /* .swiper-button-next,
-    .swiper-button-prev {
-        &:after {
-            display: none;
-        }
-    } */
 
 }
 
