--- a/src/assets/scss/pages/_admin.scss
+++ b/src/assets/scss/pages/_admin.scss
@@ -564,6 +564,12 @@
         align-items: center;
         gap: 10px;
         margin-top: 20px;
+
+        @include mobile {
+            flex-direction: column;
+            align-items: stretch;
+            margin-bottom: 10px;
+        }
     }
 
     &__ticket_btn {
@@ -723,6 +729,7 @@
 
 .admin-tabs {
     margin: 40px 0;
+    overflow: hidden;
 
     &__block {
         padding: 0 50px;
