--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -638,6 +638,10 @@
 .home-catalog-list {
     margin-top: 30px;
     margin-bottom: 30px;
+
+    @include mobile {
+        height: 70px;
+    }
 }
 
 .game-slider {
